--- a/main.html
+++ b/main.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<style type="text/css"> 
-			body {margin: 30px;} 
-		</style>  
-		<meta charset=utf-8 /> 
-		<title>Remove items from a dropdown list</title>
-	</head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Remove Color from Dropdown</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <select id="colorSelect">
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="white">White</option>
+    <option value="black">Black</option>
+  </select>
+  <input type="button" value="Select and Remove" id="removeColorButton">
 
-	<body>
-		<form> 
-			<select id="colorSelect"> 
-				<option>Red</option> 
-				<option>Green</option> 
-				<option>White</option> 
-				<option>Black</option> 
-			</select> 
-			<input type="button" value="Select and Remove"> 
-		</form>
-
-		<script type="text/javascript" src="./script.js">
-		</script>
-
-	</body>
-
+  <script src="script.js"></script>
+</body>
 </html>
